Fixed an issue in login.html where overflow-y was defaulting to the form's scrollbar instead of the main scrollbar

--- a/chat/public/style.css
+++ b/chat/public/style.css
@@ -16,9 +16,10 @@ main {
 }
 
 #login-box {
-    min-height: 10vh;
+    min-height: 650px;
     height: 75vh;
     width: 100%;
+    overflow-y: auto;
 }
 
 #sidenav {
